@@ -18,6 +18,7 @@ ikiwiki (2.62) UNRELEASED; urgency=low
     originally part of the attachment plugin.
   * edittemplate: Don't wipe out edits on preview.
   * color: New plugin from ptecza.
+  * autoindex: Avoid re-adding previously deleted (or renamed) pages.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 21 Aug 2008 16:20:58 -0400
 
